[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fonts/TrulyMadlyDpad-a72o.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Win.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Background/Background.jpg" type="Texture" id=3]
[ext_resource path="res://Music/DisableFilt.wav" type="AudioStream" id=4]
[ext_resource path="res://Sprites/Win.png" type="Texture" id=5]
[ext_resource path="res://Music/win.wav" type="AudioStream" id=6]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
margin_right = 1427.0
margin_bottom = 651.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 715.494, 328.031 )
scale = Vector2( 0.479734, 0.331668 )
texture = ExtResource( 3 )

[node name="Win" type="Sprite" parent="."]
position = Vector2( 407.554, 327.814 )
scale = Vector2( 0.797767, 0.798968 )
texture = ExtResource( 5 )

[node name="RestartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 195.672
margin_top = -153.544
margin_right = 534.672
margin_bottom = -37.5441
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 76.5
margin_top = -205.5
margin_right = 628.5
margin_bottom = 124.5
color = Color( 0.192157, 0.235294, 0.317647, 0.403922 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DistractorObjectsScoreLabel" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = 78.0
margin_right = 277.0
margin_bottom = 113.0
rect_pivot_offset = Vector2( 107.5, 35 )
custom_fonts/font = SubResource( 3 )
text = "Distractor Objects Score: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetObjectsScoreLabel" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -276.0
margin_top = 47.0
margin_right = 276.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 107.5, 35 )
custom_fonts/font = SubResource( 3 )
text = "Target Objects Score: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissedObjectsScoreLabel" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = 111.0
margin_right = 275.0
margin_bottom = 146.0
rect_pivot_offset = Vector2( 107.5, 35 )
custom_fonts/font = SubResource( 3 )
text = "Missed Objects Score: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 5.0
margin_top = 12.0
margin_right = 549.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 4 )
text = "Congrats! You beat the final level! If you are still in the middle of your session, please restart until your session is over. After your session, email becca at resq@uw.edu to notify her. "
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -171.397
margin_top = 44.2182
margin_right = -56.3972
margin_bottom = 91.2182
custom_fonts/font = SubResource( 5 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="disableFilt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="winMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -14.039
